--- a/css/brown_style.css
+++ b/css/brown_style.css
@@ -88,9 +88,10 @@ border-left:2px solid #333;}
 /*****************HOME**********************/
 /**header**/
 .phone{margin-top:70px;}
+#mobileHero{font-size:3.6em; text-align:center;font-family: 'Roboto', sans-serif;}
 .top-strip{width:100%; height:12px; background:#f1cb43;}
 .tool-auto{margin: 5% 15% 5% 20%;}
-.tool-auto button{margin: 15px; padding: 8px 30px 8px 30px; min-width:25%;}
+.tool-auto button{margin: 15px; padding: 8px 30px 8px 30px; min-width:50%;}
 
 /**main body**/
 #browns_auto_homepage_top{padding:0; }/**/
@@ -98,7 +99,7 @@ border-left:2px solid #333;}
 .carousel-control.left, .carousel-control.right {background-image: none;}
 .front-article-image{overflow: hidden;}
 .front-article-image img{border: 2px solid #555;}
-.partner-logos{margin-top:140px;}
+.partner-logos{margin-top:60px;}
 .opening p{text-align:justify; font-size:1.3em; line-height: 28px;}
 .opening h1{font-size:2.7em; margin-bottom:18%;}
 /**featured products**/
@@ -120,6 +121,8 @@ footer{min-height: 450px; background-color: #333; background-image:url('../img/d
      background-size:82%;
      background-position:bottom;    
 }
+
+#indexHeading{font-size:3.2em; text-align:center;}
 #meet_the_teamie{background-color:#424671; min-height:700px; background-image:url('../img/spanner-pattern.png');padding:50px 0 50px 0;
 }
 .slider_heading{text-align:right; margin-bottom: 7%; color:#292929;}
@@ -150,12 +153,18 @@ td{padding: 10px;}
           
           /*********************ADMIN**********************/
           .admin_headings{background:#f1cb43;}
-.relative{width:30%; background:green; height:auto; position:absolute; top:0; left:20%;}
-.absolute{position: absolute;}          
+.relative{width:75%; color:#fff; height:auto; position:absolute; top:30px; left:0;}
+.absolute{position: absolute;} 
+
+
+
+.reveal-small{display:none;}         
  @media only screen and (max-width : 768px) {
      .hide-small{ display:none;}
      .reveal-small{ display: block;}
-    }
+     .partner-logos{margin-top:0px;}
+     .tool-auto{margin-top:250px;}
+}
     
     @media only screen and (max-width : 992px) {
          
@@ -163,3 +172,5 @@ td{padding: 10px;}
          .display-med{display:block;}
          
     }
+    
+    .btn-lg{width: 30%;}
