--- a/css/brown_style.css
+++ b/css/brown_style.css
@@ -17,13 +17,38 @@ Vibrent Green => #59be22
 #myCarousel.carousel, slide{
       width: 100%;
      
-      margin: 20%;
+      margin-left:10%;
   }
-  .carousel,.item,.active{height:100%;}
+  
+#suppliers-heading{color:#fff; text-align:center; font-size:250%; font-weight:800;margin-bottom:40px;}   
+.carousel,.item,.active{height:100%;}
 .carousel-inner{height:100%;}
+hr{opacity:6; background-color:#424671; height:1px;}
+.btn-primary{background-color:#424671;}
+.btn-success{background-color:#59be22;}
+.yellow-bg{background:#f1cb43; height:auto; padding: 2px;margin-top: 55px;
 
+border-radius: 400px 0px 0px 0px;
+-moz-border-radius: 400px 0px 0px 0px;
+-webkit-border-radius: 400px 0px 0px 0px;
+border: 0px solid #000000;
+
+background: rgba(219,183,64,1);
+background: -moz-linear-gradient(top, rgba(219,183,64,1) 0%, rgba(241,203,67,1) 36%, rgba(241,203,67,1) 66%, rgba(209,173,57,1) 100%);
+background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(219,183,64,1)), color-stop(36%, rgba(241,203,67,1)), color-stop(66%, rgba(241,203,67,1)), color-stop(100%, rgba(209,173,57,1)));
+background: -webkit-linear-gradient(top, rgba(219,183,64,1) 0%, rgba(241,203,67,1) 36%, rgba(241,203,67,1) 66%, rgba(209,173,57,1) 100%);
+background: -o-linear-gradient(top, rgba(219,183,64,1) 0%, rgba(241,203,67,1) 36%, rgba(241,203,67,1) 66%, rgba(209,173,57,1) 100%);
+background: -ms-linear-gradient(top, rgba(219,183,64,1) 0%, rgba(241,203,67,1) 36%, rgba(241,203,67,1) 66%, rgba(209,173,57,1) 100%);
+background: linear-gradient(to bottom, rgba(219,183,64,1) 0%, rgba(241,203,67,1) 36%, rgba(241,203,67,1) 66%, rgba(209,173,57,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#dbb740', endColorstr='#d1ad39', GradientType=0 );
+
+}
+.grow { transition: all .2s ease-in-out; }
+.grow:hover { transform: scale(1.1); opacity:.6 }
+.green-bg{background:#59be22}
 h1 img{margin-top:6%;}
 h1, h2, h3 ,h4{font-family: 'Roboto Slab', serif;}
+h1{font-size: 300%;}
 p{font-family: 'Roboto', sans-serif;}
 img{width: 100%;}
 hr{width: 60%; margin-left:15%;}
@@ -37,7 +62,7 @@ a i:hover{color:#59be22;}
 -moz-box-shadow: 0px 10px 16px 0px rgba(0,0,0,0.75);
 box-shadow: 0px 10px 16px 0px rgba(0,0,0,0.75)
 }
-.slogan{font-family: 'Yellowtail', cursive; float:left;}
+.slogan-top{font-family: 'Yellowtail', cursive; float:left; padding:15px;margin-bottom:10px; font-size:180%; font-weight: 430; opacity:.6}
 
 .isStuck{z-index:4999;}
 
@@ -53,80 +78,97 @@ box-shadow: inset -3px 21px 47px -18px rgba(0,0,0,0.87);
 box-shadow: 0px -3px 12px 0px rgba(0,0,0,0.67);
 }
 /****************header*******************/
-.phone{padding-bottom: 20px;font-size:1.2em;text-align:right;}
-.top-strip{margin-top: 30px;width:100%;  background:#f1cb43;}
+.phone-head{font-size:1.2em; font-weight:600; text-align:right; margin:0 20px 0 20px;}
+.yellow-head{height: 20px; padding:7px;margin-top:25px;}
 .slogan{padding-top:16%;font-size:2.1em;text-align:left;color:#ccc;}
 
 
 /****************NAVBAR*********************/
 .navbar{border-radius:0px;margin-bottom:0; border-bottom:2px solid #59be22;}
 .navbar-inverse{margin-bottom:0px; background:#424671; padding:0;height:auto;}
-.nav-container{margin:0; padding:0;}
-.navbar-header{color:red; margin-bottom:0;height:auto; }
+.nav-container{margin:0; padding:0; width:100%; overflow:hidden;}
+.navbar-header{margin-bottom:0;height:auto; padding-right:15px;}
 .nav-justified{margin-top:3px;}
 .nav-justified li a{height:auto; color:#eee; opacity:.7;}
 .nav-justified li a:hover{color:#fff; opacity:1;}
 .navbar{height:auto;color:red;}
+
 .nav{height:auto;margin-bottom:0;padding-bottom:0;width:65%; float:right;}
 .absolut-header{position:relative;z-index:2000;}
-#Browns_motor_factors_header{background-color:#eee;background-image:url('../img/diagonal-tex.png'); min-height:100px;}
+#Browns_motor_factors_header{background-color:#eee;background-image:url('../img/diagonal-tex.png');}
 
 
 
 .nav-justified li a{margin:0 15px 0 15px;font-size:1em;}
 
 /****************SIDE-NAV-BAR*********************/
-.hover-nav{height: 100%; width: 180px; position:fixed; left:0; top:0px;z-index:1005;opacity:0;}
-.side-navbar{height: 100%; width: 180px; background-color:#eee; background-image:url('../img/diagonal-tex.png'); position:fixed; left:0; top:0px;z-index:500;display:none;
+.hover-nav{height: 100%; width: 60px; position:fixed; left:0; top:0px;z-index:500;opacity:0;}
+.side-navbar{height: 100%; width: 180px; background-color:#eee; background-image:url('../img/diagonal-tex.png'); position:fixed; left:0; top:0px;z-index:502;display:none;
 border-left:2px solid #333;}
 .side-navbar{padding-top:90px;}
 .side-navbar ul{margin-left:0px; padding-left:0px; width: 100%; margin-top:60px;}
 .side-navbar ul li{list-style-type:none; width:90%;margin:3px 5% 3px 5%;}
 .side-navbar ul li button{ width:100%;margin:0;}
 .btn-success {padding: 0px; font-size: 1.1em;}
-.tab{position:fixed; top:260px; right:7px; z-index:400;left:0; max-width: 55px;}
+.tab{position:fixed; top:260px; right:7px; z-index:501;left:0; max-width: 55px;}
 /*****************HOME**********************/
 /**header**/
+
 .phone{margin-top:70px;}
-#mobileHero{font-size:3.6em; text-align:center;font-family: 'Roboto', sans-serif;}
+#mobileHero{font-size:4.6em; font-weight: 900; text-align:center;font-family: 'Roboto', sans-serif;}
 .top-strip{width:100%; height:12px; background:#f1cb43;}
 .tool-auto{margin: 5% 15% 5% 20%;}
-.tool-auto button{margin: 15px; padding: 8px 30px 8px 30px; min-width:50%;}
-
+.tool-auto button{margin: 15px; padding: 8px 30px 8px 30px; width:25%;}
+#mobileSplash{background:white;}
+.mobile_subHead{font-size:2.2em;color:#f1cb43; font-weight: 600;}
 /**main body**/
-#browns_auto_homepage_top{padding:0; }/**/
+#browns_auto_homepage_top{padding:0;}
+/**/
 #myCarousel{margin-top:10px;}
 .carousel-control.left, .carousel-control.right {background-image: none;}
-.front-article-image{overflow: hidden;}
+#front-article-image{padding:0 0 60px 0; min-height:auto;}
+.front-article-image{overflow: hidden; margin-top:25px;}
 .front-article-image img{border: 2px solid #555;}
-.partner-logos{margin-top:60px;}
+
 .opening p{text-align:justify; font-size:1.3em; line-height: 28px;}
 .opening h1{font-size:2.7em; margin-bottom:18%;}
+.button-row{font-size: 100%;}
 /**featured products**/
-#browns_featured_auto_products{margin-top:8%; background-color: #eee; background-image:url('../img/spanner-pattern.png');}
+#browns_featured_auto_products{background-color: #eee; background-image:url('../img/spanner-pattern.png');
+     padding:0; min-height:auto;}
 .featured_auto_products div{padding: 4%;}
 .featured_auto_products div img{border: 1px solid #8A8A8A;}
-.carousel-inner{max-width:80%;}
+
 .carousel slide{max-width:80%;}
 #myCarousel{max-width:80%;}
 /**footer**/
-footer{min-height: 450px; background-color: #333; background-image:url('../img/dimple-texture.png');}
-.contact-footer h2{color:white;}
-.contact-footer{padding-right:90px;margin-right:90px;}
+footer{min-height: 450px; background-color: #333; background-image:url('../img/dimple-texture.png'); padding:0px;}
+#footerList{list-style-type:none; margin-left:12%; margin-top:45px;}
+#footerList a{text-decoration: none;}
+#footerList a:hover{color:#2C9E23;}
+.footer-links{color:#59be22; font-size:1.4em;}
+#footer-inner{margin-top:40px;}
+#footer-copyright{color:white;margin-top: 25px; }
+#responsivedesign{color:red; font-weight: 450;}
+#mailing_list_footer{color:#ffffff;}
+.form-control{padding-top:0px; padding-bottom:0px;}
 /*****************ABOUT**********************/
 /**main body**/
 #browns_motor_factors_about{
-     background-image:url('../img/wireframeCar.jpg');
-     background-repeat:no-repeat;
-     background-size:82%;
-     background-position:bottom;    
 }
-
+.about-title{font-size: 220%; margin-top:30px;}
+.about-opening{text-align:justify; font-size:1.2em; line-height: 26px;margin-top:30px;}
+.about-hr{margin:0;}
+.footer-hr{color:#fff; background:white;margin:0;}
 #indexHeading{font-size:3.2em; text-align:center;}
-#meet_the_teamie{background-color:#424671; min-height:700px; background-image:url('../img/spanner-pattern.png');padding:50px 0 50px 0;
-}
-.slider_heading{text-align:right; margin-bottom: 7%; color:#292929;}
-.slider_body{font-size:1.3em; line-height:28px; text-align:right;color:#292929;}
+.indexText{font-size: 1.2em; margin-bottom: 60px;}
+#meet_the_partners{background-color:#424671; min-height:auto; padding:0; background-image:url('../img/spanner-pattern.png');
+padding:50px 0 50px 0;}
+.slide{background:#fff; padding-bottom:45px; padding-top:45px;}
+.slider_heading{text-align:left; margin-bottom: 7%; color:#292929;}
+.slider_body{font-size:1.2em; line-height:22px; text-align:justify;color:#292929;}
+.slide-text{padding-left:15px;}
+.slide-image{padding-left:40px; margin:0;}
 .nav-tabs>li>a:hover, .nav>li>a:focus, .nav>li>a:hover, .nav>li>a:active, .nav>li>a .active{
     color:white; 
     border-color: transparent !important;
@@ -134,6 +176,7 @@ footer{min-height: 450px; background-color: #333; background-image:url('../img/d
 }
 
 .active{background: #515784; color:#f1cb43;}
+
 
 /***********************************PRODUCTS******************************/
 .price{color:red;} 
@@ -146,31 +189,45 @@ td{padding: 10px;}
 
 
 /*************************CONTACT*************************/
-.formbox{padding: 20px; 
+.formbox{padding: 20px;
+          height: 340px;
+          width: 70%;
           border-radius: 7px; 
-          background-color: #eee;
-          border: 1px solid #BBBBBB;}
-          
+          background-color:#eee;background-image:url('../img/diagonal-tex.png');
+}
+.contact{margin-right: 7px;}
+.formbox{margin-top:40px;}
+#contact-row-1{margin-top:70px; }
+.n{border-right:1px solid #8E8E8E;;}
+.formbox{border:2px solid #ADADAD;margin-top:20px;}          
+ #form-heading{margin-top:110px;}
+ .map{height:400px;}       
           /*********************ADMIN**********************/
           .admin_headings{background:#f1cb43;}
-.relative{width:75%; color:#fff; height:auto; position:absolute; top:30px; left:0;}
+.relative{width:75%; color:#fff; height:auto; position:absolute; top:70px; left:90px;}
 .absolute{position: absolute;} 
 
-
-
-.reveal-small{display:none;}         
+#logo{margin-top:25px;}
+.display-med{display:none;}
+.reveal-small{display:none;}
+         
  @media only screen and (max-width : 768px) {
      .hide-small{ display:none;}
      .reveal-small{ display: block;}
      .partner-logos{margin-top:0px;}
      .tool-auto{margin-top:250px;}
+     .social-media-tab{ height: 80px; top:160px; right:0px; z-index:1001;}
+     .tab{position:fixed; top:160px; right:7px; z-index:400;left:0; max-width: 45px;}
+     .indexText{font-size: .9em; line-height: 22px; margin-bottom: 40px;}
+     
+     
 }
     
     @media only screen and (max-width : 992px) {
          
          .hide-med{display:none;}
          .display-med{display:block;}
-         
+         .slider_heading{ margin-top: 125px;}
     }
     
-    .btn-lg{width: 30%;}
+    /*.btn-lg{width: 30%;}*/
