--- a/css/brown_style.css
+++ b/css/brown_style.css
@@ -103,8 +103,8 @@ box-shadow: 0px -3px 12px 0px rgba(0,0,0,0.67);
 
 /****************SIDE-NAV-BAR*********************/
 .hover-nav{height: 100%; width: 60px; position:fixed; left:0; top:0px;z-index:500;opacity:0;}
-.side-navbar{height: 100%; width: 180px; background-color:#eee; background-image:url('../img/diagonal-tex.png'); position:fixed; left:0; top:0px;z-index:502;display:none;
-border-left:2px solid #333;}
+.side-navbar{height: 100%; width: 180px; background-color:#eee; background-image:url('../img/diagonal-tex.png'); 
+position:fixed; left:0; top:0px;z-index:502;display:none;border-left:2px solid #333;overflow:scroll;}
 .side-navbar{padding-top:90px;}
 .side-navbar ul{margin-left:0px; padding-left:0px; width: 100%; margin-top:60px;}
 .side-navbar ul li{list-style-type:none; width:90%;margin:3px 5% 3px 5%;}
